--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,15 +1,12 @@
 ---
 driver:
-  name: docker
-  use_sudo: false
+  name: vagrant
 
 provisioner:
   name: chef_zero
 
 platforms:
-  - name: debian-jessie
-    driver_config:
-      image: debian:jessie
+  - name: debian-8.4
 
 suites:
   - name: default
